--- a/Nutricionista/src/Vista/FormularioJDP.form
+++ b/Nutricionista/src/Vista/FormularioJDP.form
@@ -196,14 +196,14 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="sansserif" size="14" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Ingrese:"/>
+            <Property name="text" type="java.lang.String" value="Que ingrediente quiere que contenga su Desayuno/Merienda?"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="ingresarDatoJL.setVisible(false);"/>
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="20" y="0" width="-1" height="50"/>
+              <AbsoluteConstraints x="10" y="0" width="-1" height="50"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -226,7 +226,7 @@
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="80" y="10" width="110" height="-1"/>
+              <AbsoluteConstraints x="450" y="10" width="110" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -247,12 +247,15 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Enviar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="enviarJBActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="enviarJB.setVisible(false);"/>
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="200" y="10" width="-1" height="-1"/>
+              <AbsoluteConstraints x="570" y="10" width="-1" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
