--- a/Nutricionista/src/Vista/RegistroIF.form
+++ b/Nutricionista/src/Vista/RegistroIF.form
@@ -204,6 +204,7 @@
                         <BevelBorder/>
                       </Border>
                     </Property>
+                    <Property name="name" type="java.lang.String" value="DNI" noResource="true"/>
                   </Properties>
                   <Events>
                     <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="dniJTFFocusGained"/>
